--- a/Amor.html
+++ b/Amor.html
@@ -494,7 +494,7 @@
 
             .columna-texto {
                 padding-right: 0;
-                margin-bottom: 8px;
+                margin-bottom: 28px;
                 text-align: center;
                 font-size: 1rem;
             }
@@ -510,12 +510,13 @@
             .columna-arbol {
                 height: 340px;
                 width: 100%;
+                overflow: hidden;
             }
 
             .copa-arbol-contenedor {
                 width: 260px;
                 height: 270px;
-                bottom: 70px;
+                bottom: 45px;
             }
 
             .tronco {
@@ -552,7 +553,7 @@
             .copa-arbol-contenedor {
                 width: 230px;
                 height: 240px;
-                bottom: 60px;
+                bottom: 35px;
             }
 
             .columna-texto {
