--- a/Amor.html
+++ b/Amor.html
@@ -530,6 +530,7 @@
             }
 
             .columna-arbol {
+                flex: none;
                 height: clamp(260px, 42vh, 360px);
                 width: 100%;
                 overflow: hidden;
